# spatial-transform

./: .flake8  .gitignore  CITATION.cff  README.md  changelog.md  changelog.txt  pyproject.toml  readme.md  requirements.txt  setup.cfg  test.ipynb
.github/workflows/: build_main.yml  build_preview.yml  preview.yml  publish_main.yml  publish_preview.yml  python-package.yml  release.yml
SpatialTransform/: __init__.py  euler.py  transform.py
SpatialTransform/lib/: euler.py  pose.py  transform.py
SpatialTransform/tests/: test_euler.py  test_hierarchy.py  test_methods.py  test_properties.py  utils.py
spatial-transform/: transform.py
spatial-transform/tests/: test_methods.py
src/spatial-transform-wasserwecken/: __init__.py  euler.py
