[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["dependencies"]
name = "spatial-transform"
version = "1.2.13"
authors = [ { name="Wasserwecken", email="author@example.com" }, ]
description = "Transform hierarchies in 3D space."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/Wasserwecken/spatial-transform"
"Bug Tracker" = "https://github.com/Wasserwecken/spatial-transform/issues"
